Happstack 0.3
 * Moved Combined Logging from Happstack.Server to Happstack.Server.AccessLog.Combined
 * Added Happstack.Util.Mail: a simple email interface which utilizes a smarthost

Happstack 0.2
 * Module namespace refactoring from HAppS to Happstack
   HAppS.Server  -> Happstack.Server
   HAppS.State   -> Happstack.State
   HAppS.Util    -> Happstack.Util
   HAppS.IxSet   -> Happstack.IxSet
   HAppS.Data    -> Happstack.Data
   HAppS.Contrib -> Happstack.Contrib
 * Creation of additional package 'happstack'
 * Code generation tool added for creating "quick start" project folders
 * Removed dependency of happstack-server on happstack-state
 * Removed dependency of happstack-server on happstack-ixset
 * Module Cron module moved from happstack-server to happstack-util
 * Moved Atom, HList, HListBase from happstack-data to happstack-contrib
 * Monadic machinery for ServerPartT and WebT trimmed / cleaned / optimized (Daniel Rogers)
 * New experimental gzip filter in happstack-server (similar to apache mod_deflate)
 * Builtin support for HSP, HStringTemplate (see example template / release notes)
 * happstack-server once again builds on Windows
 * Nearly all the exported functions have been documented!
 * Cookie fix from happstack-helpers was integrated into the main code
 * Combined Logging via Happstack.Server NOTICE
 
Happstack 0.1
 * Cabal packaging name change:
   HAppS-Server -> happstack-server
   HAppS-State  -> happstack-state
   HAppS-Util   -> happstack-util
   HAppS-IxSet  -> happstack-ixset
   HAppS-Data   -> happstack-data
 * Creation of additional package 'happstack-contrib' (HAppS.Contrib)
 * Moved Facebook module from happstack-server to happstack-contrib
 * Fixed various warnings
 * Removed dead modules and many dead code blocks
 * Turned name resolution off for peers in HTTP.Listen (fixes getNameInfo crash)
