@@ -78,6 +78,7 @@ Library
                        process,
                        template-haskell,
                        time,
+                       utf8-string >= 0.3.4 && < 0.4,
                        xhtml,
                        zlib
 
