@@ -1,6 +1,7 @@
 Happstack 0.3
  * Moved Combined Logging from Happstack.Server to Happstack.Server.AccessLog.Combined
  * Added Happstack.Util.Mail: a simple email interface which utilizes a smarthost
+ * SimpleHTTP: look and lookPairs now assume utf-8 from the browser
 
 Happstack 0.2
  * Module namespace refactoring from HAppS to Happstack
